# Multi-Agent-Framework

./: .gitignore  DEPLOYMENT_GUIDE.md  README.md  Usage-Breakdown.md  WEB_INTERFACE_GUIDE.md  docker-compose.yml  pyproject.toml  requirements.txt  test_workflow_history.db
backend/: .env.example  Dockerfile  README.md  requirements.txt
backend/app/: main.py
backend/app/api/: chat.py  machines.py
backend/app/core/: config_manager.py  framework_executor.py
backend/app/models/: chat.py  machine.py
backend/configs/: test_machine.yaml
docs/machine1/: manual.md
documentation/: LLM_SETUP_GUIDE.md  PHASE2_GUIDE.md  RAG_INGESTION_GUIDE.md
frontend/: Dockerfile  README.md
frontend/src/: App.css  App.jsx  api.js  index.css
multi_agent_framework/: __init__.py
multi_agent_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
multi_agent_framework/agents/: __init__.py  rag_agent.py  registry.py  specialized_agent.py
multi_agent_framework/config/: __init__.py  agent_config.py  config_loader.py
multi_agent_framework/core/: __init__.py  agent.py  context.py  coordinator.py  events.py  history.py  llm_factory.py  llm_provider.py  mcp_client.py  openai_provider.py
multi_agent_framework/core/servers/: __init__.py  base.py  highbyte.py  (+3 more)
multi_agent_framework/examples/: demo.py  demo_simple.py  llm_config_govcloud.yaml  llm_config_openai.yaml  phase2_config.yaml  phase2_demo.py  spar_lamination_config.yaml  test_llm_integration.py
tools/: setup_rag_collection.py
tools/rag_ingestion/: __init__.py  chunker.py  ingest.py  loaders.py  metadata.py
